[project]
name = "projet-info"
version = "0.1.0"
description = ""
authors = [
    {name = "Pierre-Guillaume",email = "pierre-guillaume.petitmangin@etu.minesparis.psl.eu"}
]
readme = "README.md"
requires-python = ">=2.7"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
