[tool.poetry]
name = "ANT"
version = "0.1.0"
description = ""
authors = ["Pierre-Guillaume"]
readme = "README.md"
packages = [{ include = "ANT" }]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
pyyaml = "^6.0.2"
schema = "^0.7.7"
numpy = "^2.2.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.2"
pudb = "^2024.1.3"
ipdb = "^0.13.13"
pytest = "^8.3.4"
coverage = "^7.6.9"

[tool.poetry.scripts]
ant = "ANT.main:ant_main"


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "D100", "E501", "FBT003", "D401"]

[tool.mypy]
files = "."
strict = true
pretty = true
show_error_code_links = true
show_error_context = true
show_column_numbers = true